--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.29.1",
     "qrcode": "^1.4.4",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-images-upload": "^1.2.8",
     "react-redux": "^7.2.5",
